--- a/iDeliverPortal/Views/Home/Index.cshtml
+++ b/iDeliverPortal/Views/Home/Index.cshtml
@@ -32,7 +32,6 @@
         </nav>
     </div>
     <!-- Sidebar End -->
-
     <!-- Content Start -->
     <div class="content">
         <!-- Navbar Start -->
@@ -126,26 +125,31 @@
             </div>
         </nav>
         <!-- Navbar End -->
-
         <!-- Blank Start -->
         <div class="container-fluid position-relative pt-4 px-4">
             <!-- Spinner Start -->
-            <div id="inner-spinner"
-                 class="show bg-white position-absolute translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+            @* <div id="inner-spinner"
+                class="show bg-white position-absolute translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
                 <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                    <span class="sr-only">Loading...</span>
+                <span class="sr-only">Loading...</span>
                 </div>
-            </div>
-            <!-- Spinner End -->
+                </div>
+                <!-- Spinner End -->
 
-            <div class="row vh-100 bg-light rounded align-items-center justify-content-center mx-0">
+                <div class="row vh-100 bg-light rounded align-items-center justify-content-center mx-0">
                 <div class="col-md-6 text-center">
-                    <h3>This is blank page</h3>
+                <h3>This is blank page</h3>
                 </div>
+                </div>*@
+            @*
+            *@
+
+            <div ng-if="SelectedModules=='3'">
+                <div ng-if="SelectedModules=='3'" ng-include="'../partial/Driver.html'"></div>
             </div>
         </div>
-        <!-- Blank End -->
 
+        <!-- Blank End -->
         <!-- Footer Start -->
         <div class="container-fluid pt-4 px-4">
             <div class="bg-light rounded-top p-4">
@@ -166,4 +170,5 @@
 </div>
 @section Scripts {
 <script type="text/javascript" src="~/js/controllers/profileCtrl.js"></script>
+<script type="text/javascript" src="~/js/controllers/driverCtrl.js"></script>
 }
