--- a/iDeliverPortal/Views/Shared/_Layout.cshtml
+++ b/iDeliverPortal/Views/Shared/_Layout.cshtml
@@ -21,6 +21,13 @@
     <!-- Bootstrap Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- angularjs datepicker -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-datepicker/2.1.23/angular-datepicker.css" rel="stylesheet">
+
+    <!-- angularjs dropzone-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/ng-dropzone/2.0.2/ng-dropzone.css" rel="stylesheet">
+
+
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
 
@@ -52,16 +59,43 @@
     <!-- tempusdominus bootstap -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.39.0/js/tempusdominus-bootstrap-4.min.js" integrity="sha512-k6/Bkb8Fxf/c1Tkyl39yJwcOZ1P4cRrJu77p83zJjN2Z55prbFHxPs9vN7q3l3+tSMGPDdoH51AEU8Vgo1cgAA==" crossorigin="anonymous"></script>
 
+
     <!-- angularjs -->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.8.2/angular-sanitize.min.js"></script>
+      
+      <!-- ngtable  -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/ng-table/1.0.0/ng-table.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.8.0/angular-resource.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-table/1.0.0/ng-table.min.js"></script>
+
+    <!-- dorpzone -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.2/dropzone.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.2/dropzone.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-dropzone/2.0.2/ng-dropzone.min.js"></script>
+
+    <!-- fullcalender -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angularjs-datepicker/2.1.23/angular-datepicker.min.css" integrity="sha512-na+zW8Q30kY2pN4QqBwweUdoiT6ixTp6TvGKYaEoE8rjBQmoZiZuXnfZoVFUIn+hYo56zTcTThU9z7HMmBOrYg==" crossorigin="anonymous" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-calendar/1.0.0/calendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/gcal.min.js"></script>
+
+    <!-- angularjs datepicker -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-datepicker/2.1.23/angular-datepicker.min.js" integrity="sha512-b+yZxP3ttYrh8bcJJFFHopmaZ9+PmOdmUL01PKuLo3MDMbwM+A2RAZY6fVeA39OdUaR6UgX0JO3BFhlvv1gzmQ==" crossorigin="anonymous"></script>
+
+    <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
+
+
 
     <script type="text/javascript" src="~/js/script.js"></script>
     <script type="text/javascript" src="~/js/app.js"></script>
     <script type="text/javascript" src="~/js/services/factory/interceptor.js"></script>
     <script type="text/javascript" src="~/js/services/httpService.js"></script>
     <script type="text/javascript" src="~/js/services/commonService.js"></script>
-
+    <script>
+        Dropzone.autoDiscover = false;
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
