--- a/iDeliverPortal/Views/Shared/_Layout.cshtml
+++ b/iDeliverPortal/Views/Shared/_Layout.cshtml
@@ -85,8 +85,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angularjs-datepicker/2.1.23/angular-datepicker.min.js" integrity="sha512-b+yZxP3ttYrh8bcJJFFHopmaZ9+PmOdmUL01PKuLo3MDMbwM+A2RAZY6fVeA39OdUaR6UgX0JO3BFhlvv1gzmQ==" crossorigin="anonymous"></script>
 
     <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
-
-
+       <!-- maps --> 
+       <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBzxE_P1-DHXhB6iBHIOxaQOGnFkoOCSUQ&callback=myMap"></script>
 
     <script type="text/javascript" src="~/js/script.js"></script>
     <script type="text/javascript" src="~/js/app.js"></script>
