--- a/iDeliverPortal/wwwroot/partial/MerchantBranch.html
+++ b/iDeliverPortal/wwwroot/partial/MerchantBranch.html
@@ -1,13 +1,13 @@
 ﻿<div ng-controller="Branch">
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link " ng-class="{'active':branch.tabs==1 }" ng-click="changeTab(1)" href="javascript:void(0);">merchants</a>
+            <a class="nav-link " ng-class="{'active':branch.tabs==1 }" ng-click="changeTab(1)" href="javascript:void(0);">Branches</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" ng-class="{'active':branch.tabs==2}" ng-click="changeTab(2)" href="javascript:void(0);">Add merchant</a>
+            <a class="nav-link" ng-class="{'active':branch.tabs==2}" ng-click="changeTab(2)" href="javascript:void(0);">Add Branch</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" ng-class="{'active':branch.tabs==3}" ng-click="changeTab(3)" ng-if="branch.tabs==3" href="javascript:void(0);">Edit merchant</a>
+            <a class="nav-link" ng-class="{'active':branch.tabs==3}" ng-click="changeTab(3)" ng-if="branch.tabs==3" href="javascript:void(0);">Edit Branch</a>
         </li>
 
     </ul>
