--- a/iDeliverPortal/Views/Home/Index.cshtml
+++ b/iDeliverPortal/Views/Home/Index.cshtml
@@ -145,13 +145,16 @@
             *@
 
             <div ng-if="SelectedModules=='3'">
-                <div  ng-include="'../partial/Driver.html'"></div>
+                <div ng-include="'../partial/Driver.html'"></div>
             </div>
-             <div ng-if="SelectedModules=='4'">
+            <div ng-if="SelectedModules=='4'">
                 <div ng-include="'../partial/Merchant.html'"></div>
             </div>
-                <div ng-if="SelectedModules=='5'">
-                <div  ng-include="'../partial/MerchantBranch.html'"></div>
+            <div ng-if="SelectedModules=='5'">
+                <div ng-include="'../partial/MerchantBranch.html'"></div>
+            </div>
+            <div ng-if="SelectedModules=='6'">
+                <div ng-include="'../partial/MerchantEmployee.html'"></div>
             </div>
         </div>
 
@@ -179,4 +182,5 @@
 <script type="text/javascript" src="~/js/controllers/driverCtrl.js"></script>
 <script type="text/javascript" src="~/js/controllers/merchantCtrl.js"></script>
 <script type="text/javascript" src="~/js/controllers/merchantBranchCtrl.js"></script>
+<script type="text/javascript" src="~/js/controllers/MerchantEmployeeCtrl.js"></script>
 }
