--- a/iDeliverPortal/wwwroot/partial/Driver.html
+++ b/iDeliverPortal/wwwroot/partial/Driver.html
@@ -218,9 +218,9 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="row in driverTable.data track by row.ID">
+                            <tr ng-repeat="row in driverTable.data track by row.id">
                                 <td class=" text-center">
-                                    {{$index+1}}
+                                    IDelivery_{{calculateSequence(row.id)}}
                                 </td>
                                 <td class="primary text-center" >
                                     {{row.firstName+" " +row.lastName}}
@@ -228,8 +228,10 @@
                                 <td class="primary text-center">
                                     {{row.mobile}}
                                 </td>
-                                <td class="primary text-center" >
-                                    {{row.isActive}}
+                                <td class="primary text-center">
+                                    <div class="form-check form-switch d-flex justify-content-center">
+                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" ng-click="changeVal(row.id)" ng-checked="row.isActive">
+                                    </div>
                                 </td>
                                 <td class="primary text-center">
                                     <a href="javascript:void(0);" ng-click="getDriver(row.id)" class="fw-bold text text-primary"><i class="bi bi-pencil-square"></i></a>
@@ -245,4 +247,4 @@
         </div>
     </div>
 
-
+    </div>
