--- a/iDeliverPortal/wwwroot/partial/Driver.html
+++ b/iDeliverPortal/wwwroot/partial/Driver.html
@@ -12,17 +12,32 @@
 
     </ul>
 
-
+    <!-- todo recreate by hussam using form tag with validation -->
     <div ng-if="driver.tabs==2 || driver.tabs==3">
-
         <div class="col-md-12">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center my-2 mx-1">
                     <h3>Driver Form</h3>
                 </div>
+
                 <div class="alert alert-secondary col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center p-1  my-2" role="alert">
                     Personal Information
                 </div>
+
+                <!-- driver usname and national number -->
+                <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
+                    <label>Username</label>
+                    <input type="text" ng-model="driver.obj.username" class="form-control" required>
+                    <small class="text-danger" ng-if="driver.isvalid && driver.obj.username==''">This field is Required </small>
+                </div>
+
+                <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
+                    <label>National Number</label>
+                    <input type="text" ng-model="driver.obj.nationalNumber" class="form-control" required>
+                    <small class="text-danger" ng-if="driver.isvalid && driver.obj.nationalNumber==''">This field is Required </small>
+                </div>
+
+                <!-- driver name -->
                 <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
                     <label> First name</label>
                     <input type="text" ng-model="driver.obj.firstname" class="form-control">
@@ -39,6 +54,7 @@
                     <small class="text-danger" ng-if="driver.isvalid && driver.obj.lastname==''">This field is Required </small>
                 </div>
 
+                <!-- address -->
                 <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-1">
                     <label> Address</label>
                     <input type="text" ng-model="driver.obj.address" class="form-control">
@@ -46,7 +62,7 @@
                 </div>
 
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
-                    <label> Birthday</label>
+                    <label>Birthday</label>
                     <datepicker date-year-title="selected title" date-format="dd-MM-yyyy">
                         <input ng-model="driver.obj.birthday" class="form-control">
                     </datepicker>
@@ -63,12 +79,16 @@
 
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
                     <label> Mobile</label>
-                    <input type="number" ng-model="driver.obj.mobile" class="form-control">
-                    <small class="text-danger" ng-if="driver.isvalid && (driver.obj.mobile=='' ||driver.obj.mobile==null)">This field is Required </small>
+                    <input type="text" ng-model="driver.obj.mobile" class="form-control" required>
+                    <small class="text-danger" ng-if="driver.isvalid && (driver.obj.mobile=='' ||driver.obj.mobile==null)">
+                        This field is Required
+                    </small>
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
-                    <label> Second Mobile</label>
-                    <input type="number" ng-model=" driver.obj.mobile2" class="form-control">
+                    <label>Alternative Mobile</label>
+                    <input type="text"
+                           ng-model=" driver.obj.phone"
+                           class="form-control">
                 </div>
                 <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-1 row">
                     <label> Have you been convicted in a case or have you had any lawsuits in last five years?</label>
@@ -97,7 +117,9 @@
                         <option value="0" selected="selected">Please Choice</option>
                         <option ng-repeat="item in JobTime" value="{{item.ID}}">  {{item.EnglishTitle}}</option>
                     </select>
-                    <small class="text-danger" ng-if="driver.isvalid && driver.obj.workTime=='0'">This field is Required </small>
+                    <small class="text-danger" ng-if="driver.isvalid && driver.obj.workTime=='0'">
+                        This field is Required
+                    </small>
                 </div>
                 <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-1" ng-if="driver.obj.workTime=='2'">
                     <div class="row">
@@ -127,11 +149,12 @@
                 <hr />
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
                     <label> Date to start the job</label>
-                    <datepicker date-year-title="selected title" date-format="dd-MM-yyyy">
+                    <datepicker date-year-title="selected title" date-format="DD-MM-yyyy">
                         <input ng-model="driver.obj.startJob" class="form-control">
                     </datepicker>
                     <small class="text-danger" ng-if="driver.isvalid && !driver.obj.startJob">This field is Required </small>
                 </div>
+
                 <div class="alert alert-secondary col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center p-1  my-2" role="alert">
                     Qualifications
                 </div>
@@ -156,24 +179,25 @@
                     <input type="text" ng-model="driver.obj.estimate" class="form-control">
                 </div>
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-2">
-                    <label> Avanced Studies</label>
-                    <input type="text" ng-model="driver.obj.avancedstudies" class="form-control">
+                    <label> advanced Studies</label>
+                    <input type="text" ng-model="driver.obj.advancedStudies" class="form-control">
                 </div>
+
                 <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-2">
                     <label>Attachments</label>
                     <div class="input-group">
                         <ng-dropzone class="dropzone w-100" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
                     </div>
                 </div>
+
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-2">
                     <button class="btn btn-success" ng-click="Submit()" type="button">Save</button>
                 </div>
             </div>
         </div>
-
     </div>
-    <div ng-if="driver.tabs==1">
 
+    <div ng-if="driver.tabs==1">
         <div class="col-md-12">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center my-2 mx-1">
@@ -198,22 +222,22 @@
                 </div>
                 <hr />
                 <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-1" ng-if="driverTable.showResult">
-                    <table  show-filter="false" class="table table-hover custom-table">
+                    <table show-filter="false" class="table table-hover custom-table">
                         <thead>
                             <tr>
-                                <td class=" text-center" >
+                                <td class=" text-center">
                                     Num
                                 </td>
-                                <td class="primary text-center" >
+                                <td class="primary text-center">
                                     Name
                                 </td>
-                                <td class="primary text-center" >
+                                <td class="primary text-center">
                                     Mobile
                                 </td>
-                                <td class="primary text-center" >
+                                <td class="primary text-center">
                                     Active
                                 </td>
-                                <td class="primary text-center" >
+                                <td class="primary text-center">
                                 </td>
                             </tr>
                         </thead>
@@ -222,7 +246,7 @@
                                 <td class=" text-center">
                                     IDelivery_{{calculateSequence(row.id)}}
                                 </td>
-                                <td class="primary text-center" >
+                                <td class="primary text-center">
                                     {{row.firstName+" " +row.lastName}}
                                 </td>
                                 <td class="primary text-center">
@@ -243,8 +267,6 @@
                     </table>
                 </div>
             </div>
-
         </div>
     </div>
-
-    </div>
+</div>
