--- a/iDeliverPortal/wwwroot/partial/MerchantEmployee.html
+++ b/iDeliverPortal/wwwroot/partial/MerchantEmployee.html
@@ -93,7 +93,7 @@
                 <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center my-2 mx-1">
                     <h3>Employees</h3>
                 </div>
-                <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
+                <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
                     <label> Merchant </label>
                     <select ng-model="merchant.selected" class="form-control">
                         <option value="0">Please Choice</option>
@@ -102,7 +102,7 @@
                     <small class="text-danger" ng-if="employeeTable.isvalid&& merchant.selected=='0'">This field is Required </small>
 
                 </div>
-                <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
+                <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
                     <label> Branch </label>
                     <select ng-model="branch.selected" class="form-control">
                         <option value="0">Please Choice</option>
@@ -110,6 +110,13 @@
                     </select>
                     <small class="text-danger" ng-if="employeeTable.isvalid&& branch.selected=='0'">This field is Required </small>
 
+                </div>
+                <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
+                    <label> Active </label>
+                    <select ng-model="employee.obj.IsActive" class="form-control">
+                        <option value="false">Not Active</option>
+                        <option value="true" selected="selected">Active</option>
+                    </select>
                 </div>
                 <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-1">
                     <button class="btn btn-success" ng-click="getemployeesTable()">Search</button>
@@ -151,6 +158,10 @@
                                 </td>
                                 <td class="primary text-center">
                                     <a href="javascript:void(0);" ng-click="getemployee(row.id)" class="fw-bold text text-primary"><i class="bi bi-pencil-square"></i></a>
+                                    <a href="javascript:void(0);" ng-click="activeemployee(row.id)" class="fw-bold text text-primary">
+                                        <i ng-if="!row.isActive" class="text text-danger bi bi-dash-circle-fill"></i>
+                                        <i ng-if="row.isActive" class="text text-success bi bi-file-check"></i>
+                                    </a>
                                 </td>
 
                             </tr>
