--- a/iDeliverPortal/wwwroot/partial/MerchantEmployee.html
+++ b/iDeliverPortal/wwwroot/partial/MerchantEmployee.html
@@ -79,6 +79,9 @@
                         <ng-dropzone class="dropzone w-100" options="dzOptions" callbacks="dzCallbacks" methods="dzMethods"></ng-dropzone>
                     </div>
                 </div>
+                <div class="form-group col-md-12 col-lg-12 col-sm-12 p-1 my-2">
+                    <div ng-include="'../partial/Media.html'"></div>
+                </div>
                 <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-2">
                     <button class="btn btn-success" ng-click="Submit()" type="button">Save</button>
                 </div>
